# uget2

./: .snapcraft.yaml  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  snapcraft.yaml  uget-gtk.desktop
Windows/: Makefile.am
Windows/CodeBlocks/: mingw-config.txt  test-data.cbp  test-info.cbp  test-json.cbp  test-jsonrpc.cbp  test-plugin+app.cbp  test-uget-cxx.cbp  test-uget.cbp  test-uglib-cxx.cbp  test-uglib.cbp  uget.cbp  uget.workspace  uglib.cbp  ui-gtk-1to2.cbp  ui-gtk.cbp
Windows/msvc/: msvc-config.txt  test-json.vcxproj  test-jsonrpc.vcxproj  test-plugin+app.vcxproj  test-uget.vcxproj  test-uglib.vcxproj  uget.sln  uget.vcxproj  uglib.vcxproj  ui-gtk.vcxproj
Windows/resources/: uget.rc
doc/: JSON-RPC interface.txt  Makefile.am  To_build_uGet_in_MinGW.txt  folders.txt  uget.txt
pixmaps/: Makefile.am
pixmaps/icons/hicolor/: index.theme
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  be.po  bg.po  bn_BD.po  ca.po  cs.po  da.po  de.po  es.po  fa.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka_GE.po  kk.po  ku.po  lt.po  or_IN.po  pl.po  pt_BR.po  ro.po  ru.po  sk_SK.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  uz@Latn.po  vi.po  zh_CN.po  zh_TW.po
setup/gui/: uget.desktop
sounds/: Makefile.am
tests/: Makefile.am  test-data.c  test-info.c  test-json.c  test-jsonrpc.c  test-plugin+app.c  test-uget-cxx.cxx  test-uget.c  test-uglib-cxx.cxx  test-uglib.c
uget/: Android.mk  CMakeLists.txt  Makefile.am  UgetA2cf.c  UgetA2cf.h  UgetApp.c  UgetApp.h  UgetAria2.c  UgetAria2.h  UgetCurl.c  UgetCurl.h  UgetData.c  UgetData.h  UgetEvent.c  UgetEvent.h  UgetFiles.c  UgetFiles.h  UgetHash.c  UgetHash.h  UgetIpc.c  UgetIpc.h  UgetMedia-youtube.c  UgetMedia.c  UgetMedia.h  UgetNode-compare.c  UgetNode-filter.c  UgetNode.c  UgetNode.h  UgetOption.c  UgetOption.h  UgetPlugin.c  UgetPlugin.h  UgetPluginAgent.c  UgetPluginAgent.h  UgetPluginAria2.c  UgetPluginAria2.h  UgetPluginCurl.c  UgetPluginCurl.h  UgetPluginEmpty.c  UgetPluginEmpty.h  (+16 more)
uglib/: Android.mk  CMakeLists.txt  Makefile.am  UgArray.c  UgArray.h  UgBuffer.c  UgBuffer.h  UgData.c  UgData.h  UgDefine.h  UgEntry.c  UgEntry.h  UgFileUtil.c  UgFileUtil.h  UgGroupData.c  UgGroupData.h  UgHtml.c  UgHtml.h  UgHtmlEntry.c  UgHtmlEntry.h  UgHtmlFilter.c  UgHtmlFilter.h  UgInfo.c  UgInfo.h  UgJson-custom.c  UgJson-custom.h  UgJson.c  UgJson.h  UgJsonFile.c  UgJsonFile.h  UgJsonrpc.c  UgJsonrpc.h  UgJsonrpcCurl.c  UgJsonrpcCurl.h  UgJsonrpcSocket.c  UgJsonrpcSocket.h  UgList.c  UgList.h  UgMap.c  UgMap.h  (+22 more)
ui-gtk/: Makefile.am  UgtkAboutDialog.c  UgtkAboutDialog.h  UgtkApp-callback.c  UgtkApp-main.c  UgtkApp-timeout.c  UgtkApp-ui.c  UgtkApp.c  UgtkApp.h  UgtkBanner.c  UgtkBanner.h  UgtkBatchDialog.c  UgtkBatchDialog.h  UgtkCategoryForm.c  UgtkCategoryForm.h  UgtkConfig.c  UgtkConfig.h  UgtkConfirmDialog.c  UgtkConfirmDialog.h  UgtkDownloadForm.c  UgtkDownloadForm.h  UgtkMenubar-ui.c  UgtkMenubar.c  UgtkMenubar.h  UgtkNodeDialog.c  UgtkNodeDialog.h  UgtkNodeList.c  UgtkNodeList.h  UgtkNodeTree.c  UgtkNodeTree.h  UgtkNodeView.c  UgtkNodeView.h  UgtkProxyForm.c  UgtkProxyForm.h  UgtkScheduleForm.c  UgtkScheduleForm.h  UgtkSelector.c  UgtkSelector.h  UgtkSequence.c  UgtkSequence.h  (+16 more)
ui-gtk-1to2/: Makefile.am  UgCategory.c  UgCategory.h  UgData-download.c  UgData-download.h  UgData1.c  UgData1.h  UgDataset.c  UgDataset.h  UgMarkup.c  UgMarkup.h  UgRegistry1.c  UgRegistry1.h  UgSetting.c  UgSetting.h  Ugtk1to2.c  Ugtk1to2.h  main.c
