EXTRA_DIST = \
	resources/uget.rc \
	resources/uget-icon.ico \
	msvc/msvc-config.txt   \
	msvc/stdint.h          \
	msvc/test-json.vcxproj \
	msvc/uget.vcxproj      \
	msvc/uglib.sln         \
	msvc/uglib.vcxproj     \
	msvc/ui-gtk.vcxproj    \
	CodeBlocks/mingw-config.txt     \
	CodeBlocks/test-info.cbp        \
	CodeBlocks/test-json.cbp        \
	CodeBlocks/test-jsonrpc.cbp     \
	CodeBlocks/test-plugin+app.cbp  \
	CodeBlocks/test-uget.cbp        \
	CodeBlocks/test-uget-cxx.cbp    \
	CodeBlocks/test-uglib.cbp       \
	CodeBlocks/test-uglib-cxx.cbp   \
	CodeBlocks/uget.cbp             \
	CodeBlocks/uglib.cbp            \
	CodeBlocks/uglib.workspace

