EXTRA_DIST = \
	resources/uget.rc \
	resources/uget-icon.ico \
	msvc/msvc-config.txt   \
	msvc/stdint.h          \
	msvc/test-json.vcxproj \
	msvc/test-jsonrpc.vcxproj  \
	msvc/test-plugin+app.vcxproj  \
	msvc/test-uget.vcxproj \
	msvc/test-uglib.vcxproj  \
	msvc/uget.sln          \
	msvc/uget.vcxproj      \
	msvc/uglib.vcxproj     \
	msvc/ui-gtk.vcxproj    \
	CodeBlocks/mingw-config.txt     \
	CodeBlocks/test-data.cbp        \
	CodeBlocks/test-json.cbp        \
	CodeBlocks/test-jsonrpc.cbp     \
	CodeBlocks/test-plugin+app.cbp  \
	CodeBlocks/test-uget.cbp        \
	CodeBlocks/test-uget-cxx.cbp    \
	CodeBlocks/test-uglib.cbp       \
	CodeBlocks/test-uglib-cxx.cbp   \
	CodeBlocks/uget.cbp             \
	CodeBlocks/uglib.cbp            \
	CodeBlocks/ui-gtk.cbp           \
	CodeBlocks/ui-gtk-1to2.cbp      \
	CodeBlocks/uget.workspace

