# icons installing path:
#	$(datadir)/icons/hicolor/16x16/apps/uget-icon.png
#	$(datadir)/icons/hicolor/22x22/apps/uget-icon.png
#	$(datadir)/icons/hicolor/24x24/apps/uget-icon.png
#	$(datadir)/icons/hicolor/32x32/apps/uget-icon.png
#	$(datadir)/icons/hicolor/48x48/apps/uget-icon.png
#	$(datadir)/icons/hicolor/64x64/apps/uget-icon.png
#	$(datadir)/icons/hicolor/96x96/apps/uget-icon.png
#	$(datadir)/icons/hicolor/128x128/apps/uget-icon.png
#	$(datadir)/icons/hicolor/scalable/apps/uget-icon.svg
#
iconsdir = $(datadir)
nobase_dist_icons_DATA = \
		icons/hicolor/16x16/apps/uget-icon.png    \
		icons/hicolor/22x22/apps/uget-icon.png    \
		icons/hicolor/24x24/apps/uget-icon.png    \
		icons/hicolor/32x32/apps/uget-icon.png    \
		icons/hicolor/48x48/apps/uget-icon.png    \
		icons/hicolor/64x64/apps/uget-icon.png    \
		icons/hicolor/96x96/apps/uget-icon.png    \
		icons/hicolor/128x128/apps/uget-icon.png  \
		icons/hicolor/scalable/apps/uget-icon.svg \
		icons/hicolor/16x16/apps/uget-tray-default.png  \
		icons/hicolor/22x22/apps/uget-tray-default.png  \
		icons/hicolor/24x24/apps/uget-tray-default.png  \
		icons/hicolor/32x32/apps/uget-tray-default.png  \
		icons/hicolor/48x48/apps/uget-tray-default.png  \
		icons/hicolor/16x16/apps/uget-tray-downloading.png  \
		icons/hicolor/22x22/apps/uget-tray-downloading.png  \
		icons/hicolor/24x24/apps/uget-tray-downloading.png  \
		icons/hicolor/32x32/apps/uget-tray-downloading.png  \
		icons/hicolor/48x48/apps/uget-tray-downloading.png  \
		icons/hicolor/16x16/apps/uget-tray-error.png  \
		icons/hicolor/22x22/apps/uget-tray-error.png  \
		icons/hicolor/24x24/apps/uget-tray-error.png  \
		icons/hicolor/32x32/apps/uget-tray-error.png  \
		icons/hicolor/48x48/apps/uget-tray-error.png


# pixmaps
#
ugetpixmapdir = $(datadir)/pixmaps/uget
dist_ugetpixmap_DATA = logo.png

# icons/hicolor/index.theme is needed by gtk_icon_theme_append_search_path()
#
EXTRA_DIST = icons/hicolor/index.theme

